RESOLVED FIXED178358
Safari crashes after searching PDF (under [WKPDFView zoom:to:atPoint:kind:])
https://bugs.webkit.org/show_bug.cgi?id=178358
Summary Safari crashes after searching PDF (under [WKPDFView zoom:to:atPoint:kind:])
Tim Horton
Reported 2017-10-16 13:22:14 PDT
Safari crashes after searching PDF (under [WKPDFView zoom:to:atPoint:kind:])
Attachments
Patch (1.60 KB, patch)
2017-10-16 13:24 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-10-16 13:24:05 PDT
WebKit Commit Bot
Comment 2 2017-10-16 16:03:32 PDT
Comment on attachment 323933 [details] Patch Clearing flags on attachment: 323933 Committed r223444: <https://trac.webkit.org/changeset/223444>
WebKit Commit Bot
Comment 3 2017-10-16 16:03:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-10-16 16:04:48 PDT
Note You need to log in before you can comment on or make changes to this bug.