Safari crashes after searching PDF (under [WKPDFView zoom:to:atPoint:kind:]) https://bugs.webkit.org/show_bug.cgi?id=178358 <rdar://problem/34676899>

Reviewed by Wenson Hsieh.

* UIProcess/ios/WKPDFView.mm:
(-[WKPDFView _didFindMatch:]):
UIPDFSelection can return a null rect as the selection's bounds.
We can't zoom to a null rect (and doing so results in CA throwing an
exception later).


Canonical link: https://commits.webkit.org/194586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223444 268f45cc-cd09-0410-ab3c-d52691b4dbfc